--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,20 @@
 {
-    "extends":["eslint:recommended","prettier",
+    "extends":[
+        "eslint:recommended",
+        "plugin:import/errors",
+        "plugin:react/recommended",
+        "plugin:jsx a11y/recommended",
+        "prettier",
         "prettier/react"],
-    "plugins":[],
+
+    "rules":{
+        "react/prop-types": 0,
+        "no-console": 1
+    },
+
+    "plugins":["react","import","jsx-a11y"],
     "parserOptions":{
-        "ecmaVersion":"2018",
+        "ecmaVersion":2018,
         "sourceType" :"module",
         "ecmaFeatures":{
             "jsx":true
@@ -13,5 +24,10 @@
         "es6":true,
         "browser":true,
         "node":true
+    },
+    "settings": {
+        "react": {
+            "version":"detect"
+        }
     }
 }
